--- a/index.html
+++ b/index.html
@@ -4,127 +4,85 @@
   <title>Fighting Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* Game container styles */
+    body {
+      background-color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
     .game-container {
       position: relative;
       width: 400px;
       height: 400px;
       border: 2px solid #333;
       background-color: #fff;
-      margin: 0 auto;
     }
 
-    /* Character styles */
     .character {
       position: absolute;
       width: 40px;
       height: 40px;
+      background-color: #333;
       transition: 0.2s;
     }
 
-    /* Player 1 styles */
     #player1 {
       top: 50%;
       left: 10px;
       transform: translateY(-50%);
     }
 
-    /* Touchscreen controls styles */
+    #player2 {
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+    }
+
     .touch-controls {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 20px;
     }
 
     .touch-button {
-      width: 70px;
-      height: 70px;
-      background-color: #ADD8E6;
+      width: 40px;
+      height: 40px;
+      margin: 0 5px;
+      background-color: #ccc;
       border-radius: 50%;
-      margin: 5px;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 24px;
-      font-weight: bold;
+      font-size: 20px;
+      color: #333;
       cursor: pointer;
-    }
-
-    /* Color picker styles */
-    .color-picker {
-      margin-top: 20px;
-    }
-
-    .color-picker input {
-      width: 100%;
-      height: 30px;
-      margin-top: 5px;
-    }
-
-    /* Game over screen styles */
-    .game-over-screen {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: red;
-      font-size: 36px;
     }
   </style>
 </head>
 <body>
   <div class="game-container">
     <div id="player1" class="character"></div>
+    <div id="player2" class="character"></div>
   </div>
 
   <div class="touch-controls">
-    <!-- Touch buttons -->
-    <div class="touch-button" id="move-up">&#x25B2;</div>
-    <div class="touch-button" id="move-left">&#x25C0;</div>
-    <div class="touch-button" id="move-right">&#x25B6;</div>
-    <div class="touch-button" id="move-down">&#x25BC;</div>
-    <div class="touch-button" id="move-up-left">&#x2196;</div>
-    <div class="touch-button" id="move-up-right">&#x2197;</div>
-    <div class="touch-button" id="move-down-left">&#x2199;</div>
-    <div class="touch-button" id="move-down-right">&#x2198;</div>
-  </div>
-
-  <div class="color-picker">
-    <label for="player-color">Player 1 Color:</label>
-    <input type="color" id="player-color">
-  </div>
-
-  <div class="game-over-screen" id="game-over-screen">
-    <p id="game-over-text">Game Over</p>
-    <button id="restart-button">Restart</button>
+    <div class="touch-button" data-direction="up">↑</div>
+    <div class="touch-button" data-direction="down">↓</div>
+    <div class="touch-button" data-direction="left">←</div>
+    <div class="touch-button" data-direction="right">→</div>
   </div>
 
   <script>
     var player1 = document.getElementById("player1");
+    var player2 = document.getElementById("player2");
     var stepSize = 10;
-    var gameContainer = document.querySelector(".game-container");
-    var touchButtons = document.querySelectorAll(".touch-button");
-    var gameOverScreen = document.getElementById("game-over-screen");
-    var gameOverText = document.getElementById("game-over-text");
-    var restartButton = document.getElementById("restart-button");
-
-    // Set initial game state
-    var isGameOver = false;
-
-    // Keyboard Controls
-    document.addEventListener("keydown", function(event) {
-      moveCharacter(event.keyCode);
-    });
 
     // Touchscreen Controls
+    var touchButtons = document.querySelectorAll(".touch-button");
     touchButtons.forEach(function(button) {
       button.addEventListener("touchstart", function(event) {
         event.preventDefault();
@@ -133,38 +91,21 @@
       });
     });
 
-    // Color picker
-    var colorPicker = document.getElementById("player-color");
-    colorPicker.addEventListener("input", function() {
-      changePlayerColor(player1, colorPicker.value);
-    });
-
-    // Restart button
-    restartButton.addEventListener("click", function() {
-      resetGame();
-    });
-
     function moveCharacter(direction) {
-      if (!isGameOver) {
-        // Player 1 Movement
-        if (direction === "up") {
-          moveUp(player1, stepSize);
-        } else if (direction === "down") {
-          moveDown(player1, stepSize);
-        } else if (direction === "left") {
-          moveLeft(player1, stepSize);
-        } else if (direction === "right") {
-          moveRight(player1, stepSize);
-        } else if (direction === "up-left") {
-          moveUpLeft(player1, stepSize);
-        } else if (direction === "up-right") {
-          moveUpRight(player1, stepSize);
-        } else if (direction === "down-left") {
-          moveDownLeft(player1, stepSize);
-        } else if (direction === "down-right") {
-          moveDownRight(player1, stepSize);
-        }
+      // Player 1 Movement
+      if (direction === "up") {
+        moveUp(player1, stepSize);
+      } else if (direction === "down") {
+        moveDown(player1, stepSize);
+      } else if (direction === "left") {
+        moveLeft(player1, stepSize);
+      } else if (direction === "right") {
+        moveRight(player1, stepSize);
       }
+
+      // AI Movement (Player 2)
+      var aiDirection = getRandomDirection();
+      moveCharacterAI(player2, aiDirection, stepSize);
     }
 
     function moveUp(element, stepSize) {
@@ -187,76 +128,24 @@
       element.style.left = leftPos + "px";
     }
 
-    function moveUpLeft(element, stepSize) {
-      var topPos = parseInt(element.style.top) - stepSize;
-      var leftPos = parseInt(element.style.left) - stepSize;
-      element.style.top = topPos + "px";
-      element.style.left = leftPos + "px";
+    function getRandomDirection() {
+      var directions = ["up", "down", "left", "right"];
+      var randomIndex = Math.floor(Math.random() * directions.length);
+      return directions[randomIndex];
     }
 
-    function moveUpRight(element, stepSize) {
-      var topPos = parseInt(element.style.top) - stepSize;
-      var leftPos = parseInt(element.style.left) + stepSize;
-      element.style.top = topPos + "px";
-      element.style.left = leftPos + "px";
-    }
-
-    function moveDownLeft(element, stepSize) {
-      var topPos = parseInt(element.style.top) + stepSize;
-      var leftPos = parseInt(element.style.left) - stepSize;
-      element.style.top = topPos + "px";
-      element.style.left = leftPos + "px";
-    }
-
-    function moveDownRight(element, stepSize) {
-      var topPos = parseInt(element.style.top) + stepSize;
-      var leftPos = parseInt(element.style.left) + stepSize;
-      element.style.top = topPos + "px";
-      element.style.left = leftPos + "px";
-    }
-
-    function changePlayerColor(element, color) {
-      element.style.backgroundColor = color;
-    }
-
-    function resetGame() {
-      // Reset player positions
-      player1.style.top = "50%";
-      player1.style.left = "10px";
-
-      // Reset player colors
-      changePlayerColor(player1, colorPicker.value);
-
-      // Hide game over screen
-      gameOverScreen.style.display = "none";
-
-      // Reset game state
-      isGameOver = false;
-    }
-
-    function showGameOverScreen() {
-      gameOverText.style.color = "red";
-      gameOverScreen.style.display = "flex";
-      isGameOver = true;
-    }
-
-    // Collision detection
-    function checkCollision() {
-      var player1Rect = player1.getBoundingClientRect();
-      var gameContainerRect = gameContainer.getBoundingClientRect();
-
-      if (
-        player1Rect.right >= gameContainerRect.right ||
-        player1Rect.left <= gameContainerRect.left ||
-        player1Rect.top <= gameContainerRect.top ||
-        player1Rect.bottom >= gameContainerRect.bottom
-      ) {
-        showGameOverScreen();
+    function moveCharacterAI(element, direction, stepSize) {
+      if (direction === "up") {
+        moveUp(element, stepSize);
+      } else if (direction === "down") {
+        moveDown(element, stepSize);
+      } else if (direction === "left") {
+        moveLeft(element, stepSize);
+      } else if (direction === "right") {
+        moveRight(element, stepSize);
       }
     }
-
-    // Game loop
-    setInterval(checkCollision, 10);
   </script>
 </body>
 </html>
+
