--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Welcome to the Horror Game!</h1>
     <p id="story"></p>
     <p id="options"></p>
+    <input type="text" id="answerInput">
+    <button onclick="submitAnswer()">Submit</button>
   </div>
 
   <script src="game.js"></script>
