--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button onclick="submitAnswer()">Submit</button>
   </div>
 
+  <audio id="backgroundMusic" src="music.mp3" loop></audio>
   <script src="game.js"></script>
 </body>
 </html>
