--- a/ccs.html
+++ b/ccs.html
@@ -13,7 +13,19 @@ h1 {
   margin-top: 20px;
 }
 
-button {
-  margin: 10px;
+#inputContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
+#answerInput {
+  padding: 8px;
+  margin-right: 10px;
+  width: 200px;
+}
+
+button {
+  padding: 8px 16px;
+}
