--- a/ccs.html
+++ b/ccs.html
@@ -1,6 +1,13 @@
+html, body {
+  height: 100%;
+}
+
 .container {
-  max-width: 600px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   padding: 20px;
   text-align: center;
 }
