--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <div class="container">
     <h1>Welcome to the Horror Game!</h1>
     <p id="story"></p>
-    <p id="options"></p>
+    <div id="options"></div>
     <div id="inputContainer">
-      <input type="text" id="answerInput" placeholder="Enter your answer">
       <button onclick="submitAnswer()">Submit</button>
     </div>
   </div>
